kubernetes/cart.yaml

apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: cart-db-pvc 
spec:
  accessModes:
    - ReadWriteOnce 
  resources:
    requests:
      storage: 1Gi 


apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart-service-deployment
  labels:
    app: cart-service
spec:
  replicas: 1 # 
  selector:
    matchLabels:
      app: cart-service
  template:
    metadata:
      labels:
        app: cart-service # 
    spec:
      securityContext:
        runAsUser: 1000
        fsGroup: 1000
      containers:
        - name: cart-service
          image: willchrist/cart:v2 
          ports:
            - containerPort: 8080 # 
          volumeMounts:
            - name: cart-storage 
              mountPath: /app/data 
      volumes:
        - name: cart-storage
          persistentVolumeClaim:
            claimName: cart-db-pvc 


apiVersion: v1
kind: Service
metadata:
  name: cart-service 
spec:
  type: ClusterIP 
  selector:
    app: cart-service # Forwards traffic to any pod with this label.
  ports:
    - protocol: TCP
      port: 8080 # The port that other services will connect to.
      targetPort: 8080 # The port on the pod to forward traffic to.
