kubernetes/query.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query-service
  template:
    metadata:
      labels:
        app: query-service
    spec:
      containers:
        - name: query-service
          image: willchrist/query:v1
          ports:
            - containerPort: 8002
---
apiVersion: v1
kind: Service
metadata:
  name: query-service
spec:
  selector:
    app: query-service
  ports:
    - protocol: TCP
      port: 8002
      targetPort: 8002
  type: ClusterIP
