kubernetes/ingress-rules.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /query
            pathType: Prefix
            backend:
              service:
                name: query-service
                port:
                  number: 8002
          - path: /products
            pathType: Prefix
            backend:
              service:
                name: product-service
                port:
                  number: 8001
          - path: /cart
            pathType: Prefix
            backend:
              service:
                name: cart-service
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 8000
